<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.connectdevice.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.connectdevice.ui.bluetooth.BluetoothFragment"
        android:label="@string/menu_Bluetooth"
        tools:layout="@layout/fragment_bluetooth" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.connectdevice.ui.nfc.NfcFragment"
        android:label="@string/menu_NFC"
        tools:layout="@layout/fragment_nfc" />
</navigation>