<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.nfc.NfcFragment">

    <EditText
        android:id="@+id/input_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="0"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.696"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/btn_write"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:text="@string/btn_write_text"
        app:layout_constraintEnd_toEndOf="@+id/input_message"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/input_message"
        app:layout_constraintTop_toBottomOf="@+id/input_message" />

    <TextView
        android:id="@+id/labelAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/adress_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_Address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/value_adress"
        app:layout_constraintEnd_toEndOf="@+id/labelAddress"
        app:layout_constraintStart_toStartOf="@+id/labelAddress"
        app:layout_constraintTop_toBottomOf="@+id/labelAddress" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="value"
        app:layout_constraintEnd_toEndOf="@+id/input_Address"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/input_Address"
        app:layout_constraintTop_toBottomOf="@+id/input_Address" />

    <ListView
        android:id="@+id/address_list_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_write"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_write"
        app:layout_constraintTop_toBottomOf="@+id/switch1">


    </ListView>

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:text="Clear"
        app:layout_constraintBottom_toTopOf="@+id/switch1"
        app:layout_constraintEnd_toEndOf="@+id/btn_write"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_write"
        app:layout_constraintTop_toBottomOf="@+id/btn_write" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginTop="20dp"
        android:text="@string/Switch_text"
        android:textAlignment="textStart"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/switch2"
        app:layout_constraintStart_toStartOf="@+id/btn_clear"
        app:layout_constraintTop_toBottomOf="@+id/btn_clear"
        tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/switch2"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/btn_clear"
        app:layout_constraintStart_toEndOf="@+id/switch1"
        app:layout_constraintTop_toBottomOf="@+id/btn_clear" />

</androidx.constraintlayout.widget.ConstraintLayout>